# Molog

./: .travis.yml  Infer.hs  LICENSE  Logic.hs  LogicList.hs  Molog.cabal  typed-logic-programming.cabal
Language/: Logic.hs
Language/Logic/: LogicList.hs
Language/Logic/Examples/: Infer.hs
src/: Molog.hs
src/Molog/: Prelude.hs
test/: Tests.hs
