Name:                Molog
Version:             0.1.0
Synopsis:            Molog: Typed Logic Programming
License:             BSD3
License-file:        LICENSE
Author:              Adam C. Foltzer
Maintainer:          acfoltzer@gmail.com
Category:            Language
Build-type:          Simple
Cabal-version:       >=1.8

Library
  Exposed-modules:     Molog
                     , Molog.Prelude
  Build-depends:       base >= 4
                     , containers >= 0.4
                     , logict >= 0.5
                     , mtl >= 2.1
  Hs-source-dirs:    src
