Name:                Molog
Version:             0.1
Synopsis:            Molog: Typed Logic Programming
License:             BSD3
License-file:        LICENSE
Author:              Adam C. Foltzer
Maintainer:          acfoltzer@gmail.com
Category:            Language
Build-type:          Simple
Cabal-version:       >=1.14

Library
  Exposed-modules:   Molog
--                     Molog.Prelude
  Build-depends:     base            >= 4 && < 5,
                     containers      >= 0.4,
                     logict          >= 0.5,
                     mtl             >= 2.1,
                     persistent-refs >= 0.3,
                     ref-fd          >= 0.3
  Hs-source-dirs:    src

Test-Suite Tests
  Type:		     exitcode-stdio-1.0
  hs-source-dirs:    test, src
  Main-is:	     Tests.hs
  Build-depends:     base                 >= 4 && < 5,
                     containers           >= 0.4,
                     logict               >= 0.5,
                     mtl                  >= 2.1,
                     persistent-refs      >= 0.3,
                     ref-fd               >= 0.3,
                     HUnit                >= 1.2,
                     test-framework       >= 0.8,
                     test-framework-hunit >= 0.3,
                     test-framework-th    >= 0.2

